# das-anomaly

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  user_defaults.py  validate_and_plot_density.ipynb
.github/workflows/: run_test.yml
das_anomaly/: __init__.py  config_defaults.py  config_user.py  settings.py  utils.py  validate_and_plot_density.ipynb
das_anomaly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
das_anomaly/count/: counter.py
das_anomaly/count_anomalies/: count_anomalies.py  count_anomalies.sh
das_anomaly/das_anomaly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
das_anomaly/detect/: __init__.py  detect_anomalies.py  detector.py
das_anomaly/detect_anomalies/: detect_anomalies.py  detect_anomalies.sh  detect_anomalies_MPI.py
das_anomaly/examples/: validate_and_plot_density.ipynb
das_anomaly/plot_psd/: psd.py  psd_MPI.py  psd_MPI.sh
das_anomaly/psd/: __init__.py  generator.py  psd.py  psd_MPI.py
das_anomaly/train/: __init__.py  autoencoder.py  randomly_select_train_and_test_data.py  split_images.py  train_ae.py
das_anomaly/train_model/: randomly_select_train_and_test.py  randomly_select_train_and_test_data.py  train_ae.py  train_ae_gpu.sh
examples/: f1_score.ipynb  plot_waterfall.ipynb  randomly_select_results.ipynb  thresholding_f_score.ipynb  validate_and_plot_density.ipynb
examples/bash_jobs/: detect_mpi.sh  detect_parallel.py  psd.sh  psd_mpi.sh  psd_parallel.py  train.sh
examples/exclude_known_events_from_training/: find_event_time_from_excel_Sheet.ipynb
source/: utils.py
source/count_anomalies/: count_anomalies.py  count_anomalies.sh
source/detect_anomalies/: detect_anomalies.py  detect_anomalies.sh
source/plot_psd/: psd_MPI.py  psd_MPI.sh
source/train_model/: randomly_select_train_and_test.py  train_ae.py  train_ae.sh  train_ae_cpu.sh
tests/: conftest.py  test_utils.py
tests/test_count/: test_counter.py
tests/test_detect/: test_detector.py  test_detector_init.py  test_detector_parallel.py  test_detector_serial.py
tests/test_psd/: test_config.py  test_generator_helpers.py  test_generator_parallel.py  test_generator_run.py  test_generator_serial.py
tests/test_train/: test_autoencoder.py  test_train_splits.py
