# --- Build system configuration

[build-system]
# setuptools and wheel as the build backend
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"                      # Use the exact tag as the version
version-pattern = "^v?(\\d+\\.\\d+\\.\\d+)$"   # Matches v0.0.2 or 0.0.2
tag-commit-distance = true
dirty-template = "{tag}.dev0"           # If the working directory is dirty
branch-format = "{tag}"                 # Keeps the version as the tag on branches
parent-dir-prefix = false               # Avoids parent directory versioning

# --- Project Metadata

[project]
name = "das-anomaly"

dynamic = ["version"] # version is fetched by setuptools-git-versioning

description = "A Python package for detecting anomalies in DAS data."

readme = "README.md"

authors = [
  { name = "Ahmad Tourei", email = "ahmadtourei@gmail.com" }
]

requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["DAS", "anomaly detection", "geophysics", "machine learning"]

# --- Dependencies

dependencies = [
  "dascore",
  "scikit-learn",
  "tensorflow",
]

[project.optional-dependencies]

all = [
    "mpi4py"
]

test = [
    "pre-commit",
    "ruff",
    "pooch",
]

# --- URLs for project

[project.urls]
"Source Code" = "https://github.com/ahmadtourei/das-anomaly"
"Bug Tracker" = "https://github.com/ahmadtourei/das-anomaly"
"Homepage" = "https://github.com/ahmadtourei/das-anomaly" 

# --- External tool configuration

[tool.ruff]

line-length = 88

# enable certain types of linting
lint.select = [
    "E",
    "F",
    "UP",
    "RUF",
    "I001",
    "D",
    "FA",
    "T",
    "N",
    "NPY",
    "NPY201",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py"
]

# lowest python version supported
target-version = "py310"

lint.fixable = ["ALL"]

# List of codes to ignore
lint.ignore = ["D105", "D107", "D401", "D205", "D200", "D400"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# config for docstring parsing
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"