# --- Build system configuration

[build-system]
# setuptools and wheel as the build backend
requires = [
    "wheel",
    "setuptools>=61.0",
    "setuptools-git-versioning>=1.10.1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

# --- Project Metadata

[project]
name = "das-anomaly"

dynamic = ["version"] # version is fetched by setuptools-git-versioning

description = "A Python package for detecting anomalies in DAS data."

readme = "README.md"

authors = [
  { name = "Ahmad Tourei", email = "ahmadtourei@gmail.com" }
]

requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["DAS", "anomaly detection", "geophysics", "machine learning"]

# --- Dependencies

dependencies = [
  "matplotlib",
  "dascore",
  "scikit-learn",
  "tensorflow",
]

[project.optional-dependencies]

extras = [
    "mpi4py"
]

test = [
    "pre-commit",
    "ruff",
    "pooch",
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

all = [
    "das_anomaly[extras]"
]

# --- URLs for project

[project.urls]
"Source Code" = "https://github.com/ahmadtourei/das-anomaly"
"Bug Tracker" = "https://github.com/ahmadtourei/das-anomaly"
"Homepage" = "https://github.com/ahmadtourei/das-anomaly" 

# --- External tool configuration


[tool.ruff]
line-length = 88
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "venv", "__init__.py"
]

[tool.ruff.lint]
select   = ["E","F","UP","RUF","I001","D","FA","T","N","NPY","NPY201"]
ignore   = ["D105","D107","D401","D205","D200","D400"]
fixable  = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]          # ← keep this *after* the main settings
"tests/**/*.py" = [
  "D100","D101","D102","D103","D104","D105","D107",
]

[tool.ruff.format]
line-ending = "lf"
